# morewritings

./: .gitignore  AGENT_AUTOMATION.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  demo.py  morewritings.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: automation-self-check.yml  ci.yml
examples/: .env.example  batch_example.yaml  quickstart.py
morewritings/: __init__.py
morewritings/cli/: __init__.py
morewritings/generators/: __init__.py
morewritings/models/: __init__.py
templates/: scene_templates.yaml
tests/: test_cli.py  test_generators.py  test_models.py
